# TTS-C

./: .gitignore  Package.swift  requirements.txt
cpp/: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  encoder.cpp  encoder.h  fsdecoder.cpp  fsdecoder.h  g2p.cpp  g2p.h  main.cpp  model.cpp  model.h  module.modulemap  nlp.cpp  nlp.h  onnx_utils.cpp  onnx_utils.h  ssdecoder.cpp  ssdecoder.h  ssl_content.cpp  ssl_content.h  string_utils.cpp  string_utils.h  symbols.h  text_preprocessor.cpp  text_preprocessor.h  text_utils.cpp  text_utils.h  tts_engine.cpp  tts_engine.h  vits.cpp  vits.h
cpp/onnx/: ellen.json  t2s_export.json  test.json  test3.json
cpp/onnx/test3/: test3_t2s_sdec.onnx
cpp/onnx/test3_fp16/: test3_fp16_t2s_fsdec.onnx
cpp/tests/: test_encoder.cpp  test_g2p.cpp  test_nlp.cpp  test_ssl_content.cpp  test_string_utils.cpp  test_text_preprocessor.cpp  test_text_utils.cpp  test_tts_engine.cpp
tts_new/: README.md  generate_g2p_dict.py  generate_symbols.py  get_ph.py  ssl_content.npy  test_tp.py  text_segmentation_method.py  tts.py
tts_new/onnx/: nahida.json  test2.json
tts_new/onnx/test3/: test3_t2s_fsdec.onnx  test3_vits.onnx
tts_new/onnx/test3_fp16/: test3_fp16_t2s_encoder.onnx  test3_fp16_t2s_sdec.onnx
tts_new/text/: cleaner.py
